# TravelCraft

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: graphql.py
app/api/v1/: places.py
app/api_v1/media_uploads/: views.py
app/api_v1/places/: crud.py  views.py
app/api_v1/routes/: crud.py  views.py
app/api_v1/users/: user_manager.py  views.py
app/core/: config.py
app/db/: db_helper.py  session.py  user_db.py
app/migrations/: env.py
app/migrations/versions/: 27901f73e9f2_связи_с_другими_моделями.py  ab218e4d928a_поля_обложек_для_мест_и_маршрутов.py  ce814162b36d_init.py
app/models/: __init__.py  place.py  route.py  user.py
app/schemas/: place.py  route.py  user.py
