[tool.poetry]
name = "travelcraft"
version = "0.1.0"
description = "Генератор маршрутов для путешествий"
authors = ["DotVr46 <maggot8950@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
black = "^24.10.0"
setuptools = "^75.5.0"
strawberry-graphql = "^0.250.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
